# ksnip

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODINGSTYLE  CODINGSTYLE.md  CONTACT.md  MainWindow.cpp  MainWindow.h  PaintArea.cpp  PaintArea.h  PaintStroke.cpp  README.md  Trying to add cpack #546  capturewindow.cpp  capturewindow.h  customtoolbutton.cpp  customtoolbutton.h  ksnip.desktop  main.cpp  mainwindow.cpp  mainwindow.h  paintwindow.cpp  paintwindow.h  resources.qrc  scribblearea.cpp  scribblearea.h  snippingarea.cpp  snippingarea.h  snippingframe.cpp  snippingframe.h  upload.sh
desktop/: CMakeLists.txt  ksnip.appdata.xml  ksnip.desktop  org.ksnip.ksnip.appdata.xml  org.ksnip.ksnip.desktop
src/: AboutDialog.cpp  AboutDialog.h  BuildConfig.h.in  CMakeLists.txt  CaptureView.cpp  CaptureView.h  ColorComboBox.cpp  ColorComboBox.h  CustomToolButton.cpp  CustomToolButton.h  ImageGrabber.cpp  ImageGrabber.h  MainWindow.cpp  MainWindow.h  PaintArea.cpp  PaintArea.h  PaintStroke.cpp  PaintStroke.h  SettingsDialog.cpp  SettingsDialog.h  SizeComboBox.cpp  SizeComboBox.h  SnippingArea.cpp  SnippingArea.h  main.cpp
src/application/: Bootstrapper.cpp  Bootstrapper.h
src/backend/: CapturePrinter.cpp  CapturePrinter.h  CaptureUploader.cpp  CaptureUploader.h  CmdOption.cpp  CmdOption.h  CmdParser.cpp  CmdParser.h  ITranslationLoader.h  ImageGrabber.cpp  ImageGrabber.h  ImageGrabberFactory.h  ImageSaver.cpp  ImageSaver.h  ImgurUploader.cpp  ImgurUploader.h  KsnipCommandLine.cpp  KsnipCommandLine.h  KsnipConfig.cpp  KsnipConfig.h  KsnipConfigOptions.cpp  KsnipConfigOptions.h  PlatformChecker.cpp  PlatformChecker.h  RecentImagesPathStore.cpp  RecentImagesPathStore.h  RecentImagesStore.cpp  RecentImagesStore.h  StringManip.cpp  StringManip.h  TranslationLoader.cpp  TranslationLoader.h  UploadResponse.h  WatermarkImageLoader.cpp  WatermarkImageLoader.h  X11ImageGrabber.cpp  X11ImageGrabber.h
src/bootstrapper/: BootstrapperFactory.cpp  BootstrapperFactory.h  IBootstrapper.h  IImageFromStdInputReader.h  ImageFromStdInputReader.cpp  ImageFromStdInputReader.h  InstanceLock.cpp  SingleInstanceClientBootstrapper.cpp  SingleInstanceClientBootstrapper.h  SingleInstanceServerBootstrapper.cpp  SingleInstanceServerBootstrapper.h  StandAloneBootstrapper.cpp  StandAloneBootstrapper.h
src/dependencyInjector/: DependencyInjector.cpp  DependencyInjector.h  DependencyInjectorBootstrapper.cpp  DependencyInjectorBootstrapper.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AbstractSnippingArea.cpp  AbstractSnippingArea.h  AbstractToastService.h  AppIndicatorTrayIcon.cpp  AppIndicatorTrayIcon.h  ClipboardWrapper.cpp  ClipboardWrapper.h  IClipboard.cpp  IClipboard.h  IImageProcessor.h  INotificationService.h  IToastService.h  ImgurHistoryDialog.cpp  ImgurHistoryDialog.h  LinuxSnippingArea.cpp  LinuxSnippingArea.h  MainWindow.cpp  MainWindow.h  OpenRecentMenu.cpp  OpenRecentMenu.h  RecentImagesMenu.cpp  RecentImagesMenu.h  ScaleDialog.cpp  ScaleDialog.h  SettingsDialog.cpp  SettingsDialog.h  SnippingArea.cpp  SnippingArea.h  TrayIcon.cpp  TrayIcon.h  WinSnippingArea.cpp  WinSnippingArea.h  X11SnippingArea.cpp  X11SnippingArea.h
src/helper/: CommandRunner.cpp  IconLoader.h  MathHelper.cpp  MathHelper.h  StringFormattingHelper.cpp  X11GraphicsHelper.cpp  X11GraphicsHelper.h
src/logging/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  LogOutputHandler.cpp  LogOutputHandler.h  LoggerProvider.cpp  LoggerProvider.h  NoneLogger.cpp  NoneLogger.h
src/operations/: AddWatermarkOperation.cpp  AddWatermarkOperation.h  SaveAsOperation.cpp  SaveOperation.cpp  WatermarkImagePreparer.cpp  WatermarkImagePreparer.h
src/painter/: AbstractPainterItem.cpp  AbstractPainterItem.h  NumberSequencer.cpp  NumberSequencer.h  PaintArea.cpp  PaintArea.h  PaintModes.h  PaintStroke.h  PainterArrow.cpp  PainterArrow.h  PainterBaseItem.cpp  PainterBaseItem.h  PainterEllipse.cpp  PainterEllipse.h  PainterItemFactory.cpp  PainterItemFactory.h  PainterLine.cpp  PainterLine.h  PainterMarker.cpp  PainterMarker.h  PainterNumber.cpp  PainterNumber.h  PainterPath.cpp  PainterPath.h  PainterPen.cpp  PainterPen.h  PainterRect.cpp  PainterRect.h  PainterText.cpp  PainterText.h  UndoCommands.cpp  UndoCommands.h
src/plugins/: IPluginFinder.h  IPluginLoader.h  IPluginManager.h  PluginFinder.cpp  PluginFinder.h  PluginInfo.cpp  PluginInfo.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h  WinPluginLoader.cpp  WinPluginLoader.h  WindowsPluginLoader.cpp  WindowsPluginLoader.h
src/widgets/: CaptureModePicker.cpp  CaptureModePicker.h  CaptureView.cpp  CaptureView.h  ClipboardWrapper.cpp  ClipboardWrapper.h  ColorButton.cpp  ColorButton.h  ColorComboBox.cpp  ColorComboBox.h  ContextMenu.cpp  ContextMenu.h  CropPanel.cpp  CropPanel.h  CursorFactory.cpp  CursorFactory.h  CustomCursor.cpp  CustomCursor.h  CustomLineEdit.cpp  CustomLineEdit.h  CustomSpinBox.cpp  CustomSpinBox.h  CustomToolButton.cpp  CustomToolButton.h  KeySequenceLineEdit.cpp  KeySequenceLineEdit.h  MainToolBar.cpp  MainToolBar.h  NumericComboBox.cpp  NumericComboBox.h  PaintArea.cpp  PaintArea.h  PaintStroke.cpp  PaintStroke.h  PainterSettingsPicker.cpp  PainterSettingsPicker.h  ProcessIndicator.cpp  ProcessIndicator.h  ToolPicker.cpp  ToolPicker.h  (+2 more)
tests/: CMakeLists.txt
tests/backend/: RecentImagesPathStoreTests.cpp  RecentImagesPathStoreTests.h
tests/mocks/: CaptureTabStateHandlerMock.cpp  CaptureTabStateHandlerMock.h  ClipboardMock.cpp  (+21 more)
translations/: CMakeLists.txt  ksnip_ar.ts  ksnip_bn_BD.ts  ksnip_ca.ts  ksnip_ckb.ts  ksnip_cs.ts  ksnip_da.ts  ksnip_de.ts  ksnip_el.ts  ksnip_es.ts  ksnip_et.ts  ksnip_eu.ts  ksnip_fa.ts  ksnip_fi.ts  ksnip_fr.ts  ksnip_fr_CA.ts  ksnip_gl.ts  ksnip_he.ts  ksnip_hr.ts  ksnip_hu.ts  ksnip_id.ts  ksnip_it.ts  ksnip_ja.ts  ksnip_ka.ts  ksnip_ko.ts  ksnip_nl.ts  ksnip_no.ts  ksnip_pl.ts  ksnip_pt.ts  ksnip_pt_BR.ts  ksnip_ro.ts  ksnip_ru.ts  ksnip_si.ts  ksnip_sl.ts  ksnip_sv.ts  ksnip_ta.ts  ksnip_tr.ts  ksnip_uk.ts  ksnip_zh_CN.ts  ksnip_zh_Hans.ts  (+1 more)
(+660 files in other folders)
